<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/show_text"
        android:layout_width="match_parent"
        android:layout_height="109dp"
        android:background="#1B1A1A"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2" />


    <LinearLayout
        android:id="@+id/numbers_all"
        android:layout_width="307dp"
        android:layout_height="320dp"
        android:layout_below="@id/actions_on_top"

        android:layout_marginTop="0dp"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/numbers_1_2_3"
            android:layout_width="306dp"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_1"
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:background="#EEEBEB"
                android:text="@string/button_1"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_2"
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:background="#EEEBEB"
                android:text="@string/button_2"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_3"
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:background="#EEEBEB"
                android:text="@string/button_3"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/numbers_4_5_6"
            android:layout_width="306dp"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_4"
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:background="#EEEBEB"
                android:text="@string/button_4"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_5"
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:background="#EEEBEB"
                android:text="@string/button_5"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_6"
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:background="#EEEBEB"
                android:text="@string/button_6"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/numbers_7_8_9"
            android:layout_width="306dp"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_7"
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:background="#EEEBEB"
                android:text="@string/button_7"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_8"
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:background="#EEEBEB"
                android:text="@string/button_8"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_9"
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:background="#EEEBEB"
                android:text="@string/button_9"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/numbers_0_."
            android:layout_width="306dp"
            android:layout_height="80dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_0"
                android:layout_width="204dp"
                android:layout_height="match_parent"
                android:background="#EEEBEB"
                android:text="@string/button_0"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/button_point"
                android:layout_width="102dp"
                android:layout_height="match_parent"
                android:background="#EEEBEB"
                android:text="@string/button_point"
                android:textAppearance="@style/TextAppearance.AppCompat.Display2"
                tools:ignore="ButtonStyle" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/actions_sideways"
        android:layout_width="104dp"
        android:layout_height="400dp"
        android:layout_below="@id/show_text"
        android:layout_marginLeft="-1dp"
        android:layout_toRightOf="@id/numbers_all"
        android:orientation="vertical"
        tools:ignore="RtlHardcoded">

        <Button
            android:id="@+id/button_div"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#FF5722"
            android:text="@string/button_div"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_x"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#FF5722"
            android:text="@string/button_x"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_dec"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#FF5722"
            android:text="@string/button_decrement"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_inc"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#FF5722"
            android:text="@string/button_increment"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_equals"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="#FF5722"
            android:text="@string/button_equals"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:ignore="ButtonStyle" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/actions_on_top"
        android:layout_width="306dp"
        android:layout_height="80dp"
        android:layout_below="@id/show_text"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button_clean"
            android:layout_width="102dp"
            android:layout_height="match_parent"
            android:background="#EEEBEB"
            android:text="@string/button_clean"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_change_of_sign"
            android:layout_width="102dp"
            android:layout_height="match_parent"
            android:background="#EEEBEB"
            android:text="@string/button_change_of_sign"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/button_percent"
            android:layout_width="102dp"
            android:layout_height="match_parent"
            android:background="#EEEBEB"
            android:text="@string/button_percent"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            tools:ignore="ButtonStyle" />



    </LinearLayout>



</RelativeLayout>